<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightgray"
    android:orientation="vertical">
    <RelativeLayout
        android:id="@+id/rl_my_head_bg"
        android:layout_width="match_parent"
        android:layout_height="@dimen/my_head"
        android:background="@color/colorAccent">

        <TextView
            android:id="@+id/tv_my_shop_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="true"
            android:text="卡顿 . 地破天星之术"
            android:textColor="@color/white"
            android:textSize="@dimen/my_head_shop_name_title" />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/lightgray" />

    <LinearLayout
        android:id="@+id/my_card"
        style="@style/my_list">

        <ImageView
            style="@style/my_list_item_image"
            android:background="@mipmap/icon_bank" />

        <TextView
           style="@style/my_list_item_txt"
            android:text="@string/mybank"/>
        <ImageView
            android:id="@+id/iv_show_card_is"
            style="@style/my_list_item_image"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginLeft="4dp"
            android:background="@mipmap/icon_warnnig" />
    </LinearLayout>

    <TextView style="@style/my_list_xian" />

    <LinearLayout
        android:id="@+id/my_call_me"
        style="@style/my_list">
        <ImageView
            style="@style/my_list_item_image"
            android:background="@mipmap/icon_phone" />

        <TextView
            style="@style/my_list_item_txt"
            android:text="@string/callme"/>
    </LinearLayout>

    <TextView style="@style/my_list_xian" />

    <LinearLayout
        android:id="@+id/my_give_me_se"
        style="@style/my_list">
        <ImageView
            style="@style/my_list_item_image"
            android:background="@mipmap/icon_opinion" />

        <TextView
            style="@style/my_list_item_txt"
            android:text="@string/sesugesion"/>
    </LinearLayout>

    <TextView style="@style/my_list_xian" />

    <LinearLayout
        android:id="@+id/my_change_pwd"
        style="@style/my_list">
        <ImageView
            style="@style/my_list_item_image"
            android:background="@mipmap/icon_password" />

        <TextView
            style="@style/my_list_item_txt"
            android:text="@string/changepsd"/>
    </LinearLayout>

    <TextView style="@style/my_list_xian" />

    <LinearLayout
        android:id="@+id/my_sign_out"
        style="@style/my_list">
        <ImageView
            style="@style/my_list_item_image"
            android:background="@mipmap/icon_quit" />

        <TextView
            style="@style/my_list_item_txt"
            android:text="@string/signout"/>
    </LinearLayout>

    <TextView style="@style/my_list_xian" />
</LinearLayout>
</ScrollView>